Bug 1283330 - take floating point inaccuracy into account for assertions in DecomposeIntoNoRepeatRects. r=nical